syntax = "proto3";

package api.product.v1;

option go_package = "product/v1;v1";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

service ProductInternalService {
  // 获取套餐详情
  rpc GetPlan(GetPlanRequest) returns (GetPlanResponse);
  //  商户获取套餐详情
  rpc MerchantGetPlan(MerchantGetPlanRequest) returns (MerchantGetPlanResponse);
  // 获取定价规则列表
  rpc ListPricingRules(ListPricingRulesRequest)returns (ListPricingRulesResponse);
  // 获取产品详情
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  // 商户获取产品详情
  rpc MerchantGetProduct(MerchantGetProductRequest) returns (MerchantGetProductResponse);
}

// 套餐状态枚举
enum PlanStatus {
  PLAN_STATUS_UNSPECIFIED = 0;
  PLAN_STATUS_DRAFT = 1;        // 草稿
  PLAN_STATUS_ACTIVE = 2;       // 上架
  PLAN_STATUS_INACTIVE = 3;     // 下架
  PLAN_STATUS_DISCONTINUED = 4; // 停产
}

// 值类型枚举
enum ValueType {
  VALUE_TYPE_UNSPECIFIED = 0;
  VALUE_TYPE_STRING = 1;        // 字符串
  VALUE_TYPE_NUMBER = 2;        // 数字
  VALUE_TYPE_BOOLEAN = 3;       // 布尔值
  VALUE_TYPE_DECIMAL = 4;       // 小数
}

// 套餐规则配置
message PlanParameter {
  uint32 id = 1 [json_name = "id"];                                       // 参数ID
  uint32 rule_id = 2 [json_name = "ruleId"];                              // 规则ID
  string rule_key = 3 [json_name = "ruleKey"];                            // 规则键名
  string rule_value = 4 [json_name = "ruleValue"];                        // 规则值
  ValueType value_type = 5 [json_name = "valueType"];                     // 值类型
  bool is_stackable = 6 [json_name = "isStackable"];                      // 是否可叠加购买
  google.protobuf.Struct rule_i18n = 7 [json_name = "ruleI18n"];          // 规则多语言内容
  optional string unit = 8 [json_name = "unit"];                          // 单位
  string rule_type = 9 [json_name = "ruleType"];                          // 规则类型
  bool is_unlimited = 10 [json_name = "isUnlimited"];                     // 是否无限制
}

// 产品套餐信息
message ProductPlanInfo {
  string product_code = 2 [json_name = "productCode"];                        // 产品ID
  string plan_code = 3 [json_name = "planCode"];                          // 套餐编码
  string plan_name = 17 [json_name = "planName"];                        // 套餐名称
  google.protobuf.Struct i18n = 4 [json_name = "i18n"];                   // 多语言内容
  optional string badge_color = 5 [json_name = "badgeColor"];             // 标识颜色
  int64 price_monthly = 6 [json_name = "priceMonthly"];                  // 月付价格
  int64 price_yearly = 7 [json_name = "priceYearly"];                    // 年付价格
  string currency = 8 [json_name = "currency"];                           // 货币单位
  int32 sort_order = 10 [json_name = "sortOrder"];                        // 排序
  PlanStatus status = 11 [json_name = "status"];                          // 状态
  bool is_trial_enabled = 12 [json_name = "isTrialEnabled"];              // 是否支持试用
  int32 trial_days = 13 [json_name = "trialDays"];                        // 试用天数
  google.protobuf.Timestamp create_time = 14 [json_name = "createTime"];  // 创建时间
  google.protobuf.Timestamp update_time = 15 [json_name = "updateTime"];  // 更新时间
  repeated PlanParameter parameters = 16 [json_name = "parameters"];      // 套餐规则配置
}

// 获取套餐请求
message GetPlanRequest {
  string plan_code = 1 [json_name = "planCode"];                          // 套餐编码
  optional bool include_parameters = 2 [json_name = "includeParameters"]; // 是否包含规则配置
}

// 获取套餐响应
message GetPlanResponse {
  ProductPlanInfo plan = 1 [json_name = "plan"];                          // 套餐信息
}

//  商户获取套餐请求
message MerchantGetPlanRequest {
  string plan_code = 3 [json_name = "planCode"];                          // 套餐编码
  optional bool include_parameters = 2 [json_name = "includeParameters"]; // 是否包含规则配置
}

//  商户获取套餐响应
message MerchantGetPlanResponse {
  ProductPlanInfo plan = 1 [json_name = "plan"];                          // 套餐信息
}

// 规则类型枚举
enum RuleType {
  RULE_TYPE_UNSPECIFIED = 0;
  NUMERIC = 1;       // 数字型
  USAGE = 2;         // 用量型
  SWITCH = 3;        // 开关型
}

// 规则状态枚举
enum RuleStatus {
  RULE_STATUS_UNSPECIFIED = 0;
  RULE_ACTIVE = 1;   // 启用
  RULE_INACTIVE = 2; // 禁用
}

// 重置周期枚举
enum ResetPeriod {
  RESET_PERIOD_UNSPECIFIED = 0;
  NONE = 1;          // 不重置
  DAILY = 2;         // 每日
  WEEKLY = 3;        // 每周
  MONTHLY = 4;       // 每月
  YEARLY = 5;        // 每年
}

// 定价规则信息
message PricingRuleInfo {
  uint32 id = 1 [json_name = "id"];                                       // 规则ID
  string rule_key = 2 [json_name = "ruleKey"];                            // 规则键名
  google.protobuf.Struct i18n = 3 [json_name = "i18n"];                   // 多语言内容
  RuleType rule_type = 4 [json_name = "ruleType"];                        // 规则类型
  optional string unit = 5 [json_name = "unit"];                          // 单位
  repeated string checkpoints = 6 [json_name = "checkpoints"];            // 检查点列表
  bool is_visible = 7 [json_name = "isVisible"];                          // 是否显示在前端
  bool is_accumulative = 8 [json_name = "isAccumulative"];                // 是否累加计算
  bool is_reset_periodically = 9 [json_name = "isResetPeriodically"];    // 是否按周期重置
  ResetPeriod reset_period = 10 [json_name = "resetPeriod"];              // 重置周期
  RuleStatus status = 12 [json_name = "status"];                          // 状态
  int32 sort_order = 13 [json_name = "sortOrder"];                        // 排序顺序
  int32 usage_count = 14 [json_name = "usageCount"];                      // 使用次数
  google.protobuf.Timestamp create_time = 15 [json_name = "createTime"];  // 创建时间
  google.protobuf.Timestamp update_time = 16 [json_name = "updateTime"];  // 更新时间
  bool allow_unlimited = 17 [json_name = "allowUnlimited"];                          // 是否允许不限
}

// 获取定价规则列表请求
message ListPricingRulesRequest {
  optional int32 page = 1 [json_name = "page"];                           // 页码
  optional int32 page_size = 2 [json_name = "pageSize"];                  // 每页数量
  optional string search = 3 [json_name = "search"];                      // 关键词搜索
  optional RuleType rule_type = 4 [json_name = "ruleType"];               // 规则类型筛选
  optional RuleStatus status = 5 [json_name = "status"];                  // 状态筛选
  optional bool is_visible = 6 [json_name = "isVisible"];                 // 是否可见筛选
}

message ListPricingRulesResponse {
  repeated PricingRuleInfo rules = 1 [json_name = "rules"];               // 规则列表
  int32 total = 2 [json_name = "total"];                                  // 总数
  int32 page = 3 [json_name = "page"];                                    // 当前页码
  int32 page_size = 4 [json_name = "pageSize"];
  string message = 5 [json_name = "message"];
  bool success = 6 [json_name = "success"];
}

// 产品状态枚举
enum ProductStatus {
  PRODUCT_STATUS_UNSPECIFIED = 0;
  // 草稿
  PRODUCT_STATUS_DRAFT = 1;
  // 上架
  PRODUCT_STATUS_ACTIVE = 2;
  // 下架
  PRODUCT_STATUS_INACTIVE = 3;
  // 停产
  PRODUCT_STATUS_DISCONTINUED = 4;
}

// 产品信息
message ProductInfo {
  uint32 id = 1 [json_name = "id"];                                       // 产品ID
  string product_code = 2 [json_name = "productCode"];                    // 产品编码
  string product_name = 11 [json_name = "productName"];                    // 产品名称
  google.protobuf.Struct i18n = 3 [json_name = "i18n"];                   // 多语言内容
  string image = 4 [json_name = "image"];                                // 产品图片UUID
  repeated string dimensions = 5 [json_name = "dimensions"];              // 产品选用的维度列表
  optional uint32 category_id = 6 [json_name = "categoryId"];             // 分类ID
  optional string category_name = 7 [json_name = "categoryName"];         // 分类名称
  repeated string tags = 8 [json_name = "tags"];                          // 产品标签
  int32 sort_order = 9 [json_name = "sortOrder"];                         // 排序
  ProductStatus status = 10 [json_name = "status"];                       // 状态
  int32 subscription_count = 16 [json_name = "subscriptionCount"];        // 订阅数量
  optional int64 price_monthly = 17 [json_name = "priceMonthly"];        // 月付价格（商户端使用）
  //  repeated PlanInfo plans = 18 [json_name = "plans"];                    // 套餐列表（仅当 includePlans=true 时返回）
  google.protobuf.Timestamp create_time = 14 [json_name = "createTime"];  // 创建时间
  google.protobuf.Timestamp update_time = 15 [json_name = "updateTime"];  // 更新时间
}

// 获取产品请求
message GetProductRequest {
  string product_code = 1 [json_name = "productCode"];                    // 产品编码
  optional bool include_plans = 2 [json_name = "includePlans"];           // 是否包含套餐列表
}

// 获取产品响应
message GetProductResponse {
  ProductInfo product = 1 [json_name = "product"];                        // 产品信息
}

// 商户获取产品请求
message MerchantGetProductRequest {
  string product_code = 1 [json_name = "productCode"];                    // 产品编码
  optional bool include_plans = 2 [json_name = "includePlans"];           // 是否包含套餐列表
}

//商户获取产品响应
message MerchantGetProductResponse {
  ProductInfo product = 1 [json_name = "product"];                        // 产品信息
}